--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
 <head>
-  <title>Bikcraft - Bicicletas Elétricas</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bikcraft - Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas eletricas de alta precisãoe qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  
   <link rel="stylesheet" href="./style.css">
 </head>
-
-
-<p>teste</p>
-
+<body>
+  <header>
+    <img src="./img/bikcraft.svg" alt="Bicicleta-Bikcraft">
+    <nav aria-label="primaria">
+      <ul>
+        <li><a href="./bicicletas.html">Bicicletas</a></li>
+        <li><a href="./bicicletas.html">Seguros</a></li>
+        <li><a href="./bicicletas.html">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+</body>
 
 </html>
