--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 
   <main class="introducao-bg">
     <div class="introducao">
-      <h1>Bicicletas feitas sob medida.</h1>
+      <div>
+      <h1>Bicicletas feitas sob medida<span>.</span></h1>
       <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
       <a href="./bicicletas.html">Escolha a sua</a>
+    </div>
       <img src="./img/fotos/introducao.jpg" alt="bicicleta elétrica preta.">
     </div>
   </main>
