--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </main>
 
   <article class="bicicletas-lista">
-    <h2 class="font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
+    <h2 class=" container font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
 
     <ul>
       <li>
@@ -70,5 +70,29 @@
     </ul>
   </article>
 
+  <article class="tecnologia-bg">
+    <div class="tecnologia container">
+      <div class="tecnologia-conteudo">
+        <span>Tecnologia Avançada</span>
+        <h2>Você escolhe as suas cores e componentes.</h2>
+        <p>Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura. garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <a href="./bicicletas.html">Escolha um modelo</a>
+        <div>
+          <img src="./img/icones/eletrica.svg" alt="eletrica">
+          <h3>Motor Elétrico</h3>
+          <p>Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120 hrs. A bateria é recarregada com sua energia gasta ao pedalar.</p>
+        </div>
+        <div>
+          <img src="./img/icones/rastreador.svg" alt="eletrica">
+          <h3>Rastreador</h3>
+          <p>Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+        </div>
+      </div>
+
+      <div class="tecnologia-imagem">
+        <img src="./img/fotos/tecnologia.jpg" alt="banner">
+      </div>
+    </div>
+  </article>
 </body>
 </html>
