--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@
         <a class="botao" href="./orçamento.html">Inscreva-se</a>
       </div>
     </div>
-
   </article>
+
+  <footer>
+    
+  </footer>
 </body>
 </html>
