--- a/index.html
+++ b/index.html
@@ -160,8 +160,43 @@
     </div>
   </article>
 
-  <footer>
-    
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-0">Contato</h3>
+        <ul class="font-2-m cor-5">
+          <li><a href="tel:+551299999999">+55 12 999999999</a></li>
+          <li><a href="mailto:contato@bikvraft">Contato@bik.com</a></li>
+          <li>Rua Turim, 200 , Sao jose dos Campos</li>
+          <li>São Paulo - SP</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="./">
+            <img src="./img/redes/instagram.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./img/redes/facebook.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./img/redes/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-l-b cor-0">Informações</h3>
+        <nav>
+          <ul class="font-1-m cor-5">
+            <li><a href="./bicicletas.html">Bicicletas</a></li>
+            <li><a href="./seguros.html">Seguros</a></li>
+            <li><a href="./contato.html">Contato</a></li>
+            <li><a href="./termos.html">Termos e condições</a></li>
+          </ul>
+        </nav>
+      </div>
+      <p class="footer-copy font-2-m cor-6" >Bikcraft &copy Alguns direitos reservados.</p>
+    </div>
+
   </footer>
 </body>
 </html>
