--- a/bicicletass/nimbus.html
+++ b/bicicletass/nimbus.html
@@ -89,6 +89,31 @@
    
   </main>
 
+  
+  <article class="bicicletas-lista container">
+    <h2 class="font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h2>
+
+    <ul>
+      <li>
+        <a href="../bicicletas/magic.html">
+          <img src="../img/bicicletas/magic.jpg" alt="bicicleta-preta">
+          <h3 class="font-1-xl">Magic Night</h3>
+          <span class="font-2-m cor-8">R$ 2499</span>
+        </a>
+      </li>
+
+
+      <li>
+        <a href="../bicicletas/nebula.html">
+          <img src="../img/bicicletas/nebula.jpg" alt="bicicleta-preta">
+          <h3 class="font-1-xl">Magic Night</h3>
+          <span class="font-2-m cor-8">R$ 3489</span>
+        </a>
+      </li>
+    
+    </ul>
+  </article>
+
   <footer class="footer-bg">
     <div class="footer container">
       <img src="../img/bikcraft.svg" alt="bikcraft">
@@ -111,7 +136,7 @@
             <img src="../img/redes/youtube.svg" alt="Youtube">
           </a>
         </div>
-      </div>
+        </div>
       <div class="footer-informacoes">
         <h3 class="font-2-l-b cor-0">Informações</h3>
         <nav>
