--- a/bicicletass/magic.html
+++ b/bicicletass/magic.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nimbus | Bikcraft</title>
+  <title>Magic | Bikcraft</title>
   <meta name="description" content="Termos e condições.">
   
   <link rel="stylesheet" href="../style.css">
@@ -32,18 +32,18 @@
   <main class="titulo-bg">
     <div>
       <div class="titulo container">
-        <p class="font-2-xl cor-5">R$ 4999</p>
-        <h1 class="font-1-xxl cor-0">Nimbus Stark <span class="cor-p1">.</span></h1>
+        <p class="font-2-xl cor-5">R$ 2499</p>
+        <h1 class="font-1-xxl cor-0">Magic Might <span class="cor-p1">.</span></h1>
       </div>
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
-        <img src="../img/bicicleta/nimbus1.jpg" alt="">
         <img src="../img/bicicleta/nimbus2.jpg" alt="">
+        <img src="../img/bicicleta/nimbus1.jpg" alt="">
         <img src="../img/bicicleta/nimbus3.jpg" alt="">
       </div>
       <div class="bicicleta-conteudo">
-        <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-l cor-5">A Magic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a class="botao" href="../orçamento.html">Comprar Agora</a>
 
@@ -60,7 +60,7 @@
         </li>
         <li>
           <img src="../img/icones/velocidade.svg" alt="">
-          <h3 class="font-1-m cor-0">50 km/h</h3>
+          <h3 class="font-1-m cor-0">45 km/h</h3>
           <p class="font-2-xs cor-5">A mais rápida bicicleta elétrica dispónivel hoje no mercado</p>
         </li>
         <li>
@@ -94,16 +94,16 @@
 
     <ul>
       <li>
-        <a href="../bicicletass/magic.html">
-          <img src="../img/bicicletas/magic.jpg" alt="bicicleta-preta">
-          <h3 class="font-1-xl">Magic Night</h3>
+        <a href="../bicicletass/nimbus.html">
+          <img src="../img/bicicletas/nimbus.jpg" alt="bicicleta-preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 2499</span>
         </a>
       </li>
 
 
       <li>
-        <a href="../bicicletas/nebula.html">
+        <a href="../bicicletass/nebula.html">
           <img src="../img/bicicletas/nebula.jpg" alt="bicicleta-preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3489</span>
