--- a/bicicletas.html
+++ b/bicicletas.html
@@ -64,7 +64,7 @@
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/nimbus.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletass/nimbus.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -95,7 +95,7 @@
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/magic.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletass/magic.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -126,7 +126,7 @@
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/nebula.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletass/nebula.html">Mais sobre</a>
         </div>
       </div>
     </div>
