--- a/bicicletass/nimbus.html
+++ b/bicicletass/nimbus.html
@@ -45,7 +45,7 @@
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a class="botao" href="../orçamento.html">Comprar Agora</a>
+          <a class="botao" href="../orcamento.html">Comprar Agora</a>
 
           <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg"> em 5 dias</span>
           <span class="font-1-xs cor-6"><img src="../img/icones/estoque.svg"> 18 em estoque</span>
@@ -103,7 +103,7 @@
 
 
       <li>
-        <a href="../bicicletas/nebula.html">
+        <a href="./nebula.html">
           <img src="../img/bicicletas/nebula.jpg" alt="bicicleta-preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3489</span>
