--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Bikcraft - Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas eletricas de alta precisãoe qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   
+
   <link rel="stylesheet" href="./style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +24,7 @@
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
-          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="./contatos.html">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -198,5 +199,7 @@
     </div>
 
   </footer>
+
+<script src="./javascript/script.js"></script>
 </body>
 </html>
