--- a/seguros.html
+++ b/seguros.html
@@ -23,7 +23,7 @@
         <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
-          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="./contatos.html">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -48,7 +48,7 @@
             <li>Suporte 08h às 18h</li>
             <li>Cobertura estadual</li>
           </ul>
-          <a class="botao secundario" href="./orçamento.html">Inscreva-se</a>
+          <a class="botao secundario" href="./orcamento.html">Inscreva-se</a>
         </div>
         <div class="seguros-item">
           <h3 class="font-1-xl cor-p1">OURO</h3>
@@ -61,7 +61,7 @@
             <li>Desconto em parceiros</li>
             <li>Acesso ao clube Bikcraft</li>
           </ul>
-          <a class="botao" href="./orçamento.html">Inscreva-se</a>
+          <a class="botao" href="./orcamento.html">Inscreva-se</a>
         </div>
       </div>
   </main>
@@ -175,5 +175,6 @@
     </div>
 
   </footer>
+<script src="./javascript/script.js"></script>
 </body>
 </html>
